--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,10 @@ h1 {
   color: #bfb39a;
   font-size: 40px;
 }
+
+h2{
+  font-family: 'Cinzel', serif;
+  color: white;
+  font-size: 32px;
+  margin: auto;
+}
