--- a/styles.css
+++ b/styles.css
@@ -21,22 +21,33 @@ h2 {
   font-family: 'Cinzel', serif;
   color: white;
   font-size: 20px;
-  margin: 2%;
+  margin: 0%;
 }
 
 h3 {
   font-family: 'Cinzel', serif;
   color: #bfb39a;
   text-align: center;
-  margin: 30% auto;
   font-size: 30px;
+  padding-top: 12%;
+  margin-bottom: -1%;
 }
 
 .icon-title {
   display: inline-block;
-  margin: 0 auto;
+  text-align: left;
+}
+
+.car-container {
+  width: 100%;
+  height: 174px;
+  overflow: hidden;
+  margin-top: 8%;
+  cursor: pointer;
 }
 
 .car-icon {
   width: 100%;
+  height: inherit;
+  overflow: hidden;
 }
