--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,8 @@ h3 {
 .icon-title {
   display: inline-block;
   text-align: left;
+  font-family: 'Raleway', sans-serif;
+  font-size: 12px;
 }
 
 .car-container {
