--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ h3 {
   color: #bfb39a;
   text-align: center;
   font-size: 30px;
-  padding-top: 12%;
+  padding-top: 7%;
   margin-bottom: -1%;
 }
 
@@ -38,6 +38,10 @@ h3 {
   text-align: left;
   font-family: 'Raleway', sans-serif;
   font-size: 12px;
+}
+
+.hidden {
+  display: none;
 }
 
 .car-container {
@@ -52,4 +56,20 @@ h3 {
   width: 100%;
   height: inherit;
   overflow: hidden;
+}
+
+.specs-header {
+  margin-bottom: 10%;
+}
+
+.car-specs {
+  text-align: left;
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  color: white;
+}
+
+strong {
+  font-weight: 900;
+  color: #bfb39a;
 }
