--- a/styles.css
+++ b/styles.css
@@ -73,3 +73,19 @@ strong {
   font-weight: 900;
   color: #bfb39a;
 }
+
+.button-container {
+  position: relative;
+  margin-top: 8%;
+}
+
+.spec-button {
+  position: absolute;
+  padding: 5%;
+  width: 100%;
+  font-family: 'Cinzel', serif;
+  font-size: 20px;
+  color: white;
+  background-color: #bfb39a;
+  text-align: center;
+}
